# open-data

./: .gitmodules  Insomnia_2025-01-19.json  Insomnia_2025-01-19.yaml  pyproject.toml  wiki.py
src/open_data/: __init__.py
