[project]
name = "open-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jgeofil", email = "jeremy.geo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
